refactoring, cache prototype.